--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -244,5 +244,12 @@ body{
     .header__burger{
         display: flex;
     }
+    .theme__title{
+        font-size: 40px;
+        line-height: 120%;
+    }
+    .theme__subtitle{
+        font-size: 15px;
+    }
 }
 //==============
