--- a/css/style.css
+++ b/css/style.css
@@ -330,4 +330,11 @@ body {
   .header__burger {
     display: flex;
   }
+  .theme__title {
+    font-size: 40px;
+    line-height: 120%;
+  }
+  .theme__subtitle {
+    font-size: 15px;
+  }
 }
