--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -216,6 +216,33 @@ body{
     text-align: justify;
     text-transform: uppercase;
 }
+.about {
+    margin-top: 439px;
+}
+.about__background{
+    & img {
+        width: 100%;
+        height: 100vh;
+        position: absolute;
+        z-index: -1;
+        object-fit: cover;
+    }
+}
+.container {
+}
+.about__wrapper {
+}
+.about__content {
+}
+.about__question {
+}
+.about__title {
+    font-size: 30px;
+}
+.about__story-game {
+}
+.about__slider {
+}
 // media ---------------
 @media (max-width: 800px){
     .header__menu-list{
