--- a/css/style.css
+++ b/css/style.css
@@ -303,6 +303,23 @@ body {
   text-transform: uppercase;
 }
 
+.about {
+  margin-top: 439px;
+}
+
+.about__background img {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  z-index: -1;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.about__title {
+  font-size: 30px;
+}
+
 @media (max-width: 800px) {
   .header__menu-list {
     gap: 20px;
