--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -7,6 +7,13 @@ body{
     font-family: "Open Sans", serif;
 }
 
+.header{
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 .container {
     max-width: 1220px;
     margin: 0 auto;
@@ -210,14 +217,24 @@ body{
     }
 }
 .anchor__title {
-    font-size: 12px;
-    line-height: 22px;
-    letter-spacing: 0px;
-    text-align: justify;
-    text-transform: uppercase;
+    & a{
+        color: #fff;
+        font-size: 12px;
+        line-height: 22px;
+        letter-spacing: 0px;
+        text-align: justify;
+        text-transform: uppercase;
+        &:hover{
+            color: #FFB548 !important;
+        }
+    }
 }
 .about {
-    margin-top: 439px;
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 .about__background{
     & img {
@@ -228,20 +245,67 @@ body{
         object-fit: cover;
     }
 }
-.container {
-}
-.about__wrapper {
+.about__wrapper{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .about__content {
+    height: 100vh;
+    width: 700px;
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    flex-direction: column;
+    gap: 9px;
 }
 .about__question {
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 24px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
 }
 .about__title {
-    font-size: 30px;
+    font-size: 80px;
+    font-weight: 700;   
+    line-height: 80px;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    // max-width: 700px;
+}
+.about-line{
+    // width: 650px;
+    height: 2px;
+    background-color: #fff;
 }
 .about__story-game {
+    margin-top: 60px;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0px;
+    // max-width: 365px;
+    & span{
+        font-weight: 700;
+    }
+    text-align: left;
 }
-.about__slider {
+.swiper {
+    width: 500px;
+    height: 600px;
+}
+.swiper-slide {
+    & img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 5px;
+    }
+}
+.swiper-button-next{
+    right: 250px !important;
+    left: auto;
 }
 // media ---------------
 @media (max-width: 800px){
@@ -280,6 +344,29 @@ body{
     }
     .theme__title{
         margin-top: 50%;
+    }
+    .about__wrapper{
+        flex-direction: column;
+    }
+    .about__content{
+        height: 500px;
+        align-items: center;
+        text-align: center;
+    }
+    .swiper{
+        width: 300px;
+        height: 330px;
+    }
+    .about__question{
+        font-size: 18px;
+    }
+    .about__title{
+        font-size: 33px;
+        line-height: 33px;
+        letter-spacing: 3px;
+    }
+    .about__story-game{
+        font-size: 14px;
     }
 }
 //==============
