--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,14 @@ body {
   font-family: "Open Sans", serif;
 }
 
+.header {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .container {
   max-width: 1220px;
   margin: 0 auto;
@@ -295,16 +303,24 @@ body {
   color: #FFB548 !important;
 }
 
-.anchor__title {
+.anchor__title a {
+  color: #fff;
   font-size: 12px;
   line-height: 22px;
   letter-spacing: 0px;
   text-align: justify;
   text-transform: uppercase;
 }
+.anchor__title a:hover {
+  color: #FFB548 !important;
+}
 
 .about {
-  margin-top: 439px;
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .about__background img {
@@ -316,8 +332,71 @@ body {
      object-fit: cover;
 }
 
+.about__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.about__content {
+  height: 100vh;
+  width: 700px;
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  flex-direction: column;
+  gap: 9px;
+}
+
+.about__question {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+
 .about__title {
-  font-size: 30px;
+  font-size: 80px;
+  font-weight: 700;
+  line-height: 80px;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+}
+
+.about-line {
+  height: 2px;
+  background-color: #fff;
+}
+
+.about__story-game {
+  margin-top: 60px;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0px;
+  text-align: left;
+}
+.about__story-game span {
+  font-weight: 700;
+}
+
+.swiper {
+  width: 500px;
+  height: 600px;
+}
+
+.swiper-slide img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 5px;
+}
+
+.swiper-button-next {
+  right: 250px !important;
+  left: auto;
 }
 
 @media (max-width: 800px) {
@@ -356,5 +435,28 @@ body {
   }
   .theme__title {
     margin-top: 50%;
+  }
+  .about__wrapper {
+    flex-direction: column;
+  }
+  .about__content {
+    height: 500px;
+    align-items: center;
+    text-align: center;
+  }
+  .swiper {
+    width: 300px;
+    height: 330px;
+  }
+  .about__question {
+    font-size: 18px;
+  }
+  .about__title {
+    font-size: 33px;
+    line-height: 33px;
+    letter-spacing: 3px;
+  }
+  .about__story-game {
+    font-size: 14px;
   }
 }
