--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -275,7 +275,7 @@ body{
     // max-width: 700px;
 }
 .about-line{
-    // width: 650px;
+    width: 90%;
     height: 2px;
     background-color: #fff;
 }
@@ -285,15 +285,28 @@ body{
     font-weight: 400;
     line-height: 22px;
     letter-spacing: 0px;
-    // max-width: 365px;
+    max-width: 365px;
     & span{
         font-weight: 700;
     }
     text-align: left;
 }
+.line-story{
+    position: relative;
+    &::after{
+        content: '';
+        position: absolute;
+        left: 11px;
+        bottom: 0px;
+        width: calc(100%);
+        height: 6px;
+        background-color: #FFB548;
+    }
+}
 .swiper {
     width: 500px;
     height: 600px;
+    position: relative;
 }
 .swiper-slide {
     & img{
@@ -307,7 +320,68 @@ body{
     right: 250px !important;
     left: auto;
 }
+.swiper-pagination{
+    position: absolute; 
+    left: 0; 
+    bottom: 20px; 
+    display: flex;
+    align-items: center;
+    padding: 0 10px;
+    z-index: 10;
+    display: flex;
+    gap: 14px;
+}
+.swiper-pagination-bullet {
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background-color: #ddd;
+    margin-right: 10px; /* Отступы между кружками */
+    cursor: pointer;
+    position: relative; /* для абсолютного позиционирования линий */
+    width: 10px !important;
+    height: 10px !important;
+}
+.swiper-pagination-bullet-active {
+    background-color: #fff !important;
+}
+.swiper-pagination-bullet::before {
+    content: "";
+    position: absolute;
+    left: calc(100%);
+    top: 50%;
+    transform: translateY(-50%);
+    height: 3px;
+    border-radius: 5px;
+    width: 0; /* Начальная длина 0*/
+    background-color: #ddd; /* Цвет линии */
+    transition: width 0.3s ease;/* плавный переход ширины */
+}
+.swiper-pagination-bullet.swiper-pagination-bullet-active::before {
+    width: 17px; /* длина линии */
+}
+.swiper-pagination-bullet:last-child::before{
+    display: none;
+ }
 // media ---------------
+@media (max-width: 1200px) {
+    .about__question{
+        font-size: 20px;   
+    }
+    .swiper{
+        width: 700px;
+    }
+    .about__title{
+        font-size: 50px;
+        line-height: 60px;
+    }
+    .about__story-game{
+        margin-top: 30px;
+    }
+    .about__content{
+        width: 100%;
+    }
+}
 @media (max-width: 800px){
     .header__menu-list{
         gap: 20px;
@@ -325,6 +399,21 @@ body{
         z-index: 5;
         top: 0;
         left: 0;
+    }
+    .about__content{
+        height: auto !important;
+        margin-top: 20px;
+        margin-bottom: 45px;
+        align-items: start !important;
+        text-align: left !important;
+    }
+    .swiper-pagination{
+        align-items: center;
+        justify-content: center;
+    }
+    .about-line{
+        margin-top: 30px;
+        width: 100%;
     }
     .open{
         display: flex;
@@ -367,6 +456,11 @@ body{
     }
     .about__story-game{
         font-size: 14px;
+        text-align: center;
+        min-width: 100% !important;
+    }
+    .anchor-wrapper{
+        left: 46%;
     }
 }
 //==============
