--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*--------------------*/
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   color: #fff;
   font-family: "Open Sans", serif;
@@ -365,6 +369,7 @@ body {
 }
 
 .about-line {
+  width: 90%;
   height: 2px;
   background-color: #fff;
 }
@@ -375,15 +380,30 @@ body {
   font-weight: 400;
   line-height: 22px;
   letter-spacing: 0px;
+  max-width: 365px;
   text-align: left;
 }
 .about__story-game span {
   font-weight: 700;
 }
 
+.line-story {
+  position: relative;
+}
+.line-story::after {
+  content: "";
+  position: absolute;
+  left: 11px;
+  bottom: 0px;
+  width: 100%;
+  height: 6px;
+  background-color: #FFB548;
+}
+
 .swiper {
   width: 500px;
   height: 600px;
+  position: relative;
 }
 
 .swiper-slide img {
@@ -399,6 +419,73 @@ body {
   left: auto;
 }
 
+.swiper-pagination {
+  position: absolute;
+  left: 0;
+  bottom: 20px;
+  display: flex;
+  align-items: center;
+  padding: 0 10px;
+  z-index: 10;
+  display: flex;
+  gap: 14px;
+}
+
+.swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: #ddd;
+  margin-right: 10px; /* Отступы между кружками */
+  cursor: pointer;
+  position: relative; /* для абсолютного позиционирования линий */
+  width: 10px !important;
+  height: 10px !important;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: #fff !important;
+}
+
+.swiper-pagination-bullet::before {
+  content: "";
+  position: absolute;
+  left: 100%;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 3px;
+  border-radius: 5px;
+  width: 0; /* Начальная длина 0*/
+  background-color: #ddd; /* Цвет линии */
+  transition: width 0.3s ease; /* плавный переход ширины */
+}
+
+.swiper-pagination-bullet.swiper-pagination-bullet-active::before {
+  width: 17px; /* длина линии */
+}
+
+.swiper-pagination-bullet:last-child::before {
+  display: none;
+}
+
+@media (max-width: 1200px) {
+  .about__question {
+    font-size: 20px;
+  }
+  .swiper {
+    width: 700px;
+  }
+  .about__title {
+    font-size: 50px;
+    line-height: 60px;
+  }
+  .about__story-game {
+    margin-top: 30px;
+  }
+  .about__content {
+    width: 100%;
+  }
+}
 @media (max-width: 800px) {
   .header__menu-list {
     gap: 20px;
@@ -416,6 +503,21 @@ body {
     z-index: 5;
     top: 0;
     left: 0;
+  }
+  .about__content {
+    height: auto !important;
+    margin-top: 20px;
+    margin-bottom: 45px;
+    align-items: start !important;
+    text-align: left !important;
+  }
+  .swiper-pagination {
+    align-items: center;
+    justify-content: center;
+  }
+  .about-line {
+    margin-top: 30px;
+    width: 100%;
   }
   .open {
     display: flex;
@@ -458,5 +560,10 @@ body {
   }
   .about__story-game {
     font-size: 14px;
+    text-align: center;
+    min-width: 100% !important;
+  }
+  .anchor-wrapper {
+    left: 46%;
   }
 }
